// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<descriptions> demo: render [align] correctly 1`] = `
"<div class=\\"mb-space mb-space-vertical\\">
  <div class=\\"mb-space-item\\" style=\\"margin-bottom: 24px;\\">
    <div class=\\"mb-descriptions mb-descriptions-layout-horizontal mb-descriptions-size-medium\\">
      <div class=\\"mb-descriptions-title\\">User Info</div>
      <div class=\\"mb-descriptions-body\\">
        <table class=\\"mb-descriptions-table\\">
          <tbody>
            <tr class=\\"mb-descriptions-row\\">
              <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: right;\\">Name</td>
              <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: right;\\" colspan=\\"1\\">Socrates</td>
              <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: right;\\">Mobile</td>
              <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: right;\\" colspan=\\"1\\">123-1234-1234</td>
              <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: right;\\">Residence</td>
              <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: right;\\" colspan=\\"1\\">Beijing</td>
            </tr>
            <tr class=\\"mb-descriptions-row\\">
              <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: right;\\">Hometown</td>
              <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: right;\\" colspan=\\"1\\">Beijing</td>
              <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: right;\\">Address</td>
              <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: right;\\" colspan=\\"3\\">Yingdu Building, Zhichun Road, Beijing</td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div class=\\"mb-space-item\\" style=\\"margin-bottom: 24px;\\">
    <div class=\\"mb-descriptions mb-descriptions-layout-horizontal mb-descriptions-size-medium\\">
      <div class=\\"mb-descriptions-title\\">User Info</div>
      <div class=\\"mb-descriptions-body\\">
        <table class=\\"mb-descriptions-table\\">
          <tbody>
            <tr class=\\"mb-descriptions-row\\">
              <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: right;\\">Name</td>
              <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Socrates</td>
              <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: right;\\">Mobile</td>
              <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">123-1234-1234</td>
              <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: right;\\">Residence</td>
              <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
            </tr>
            <tr class=\\"mb-descriptions-row\\">
              <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: right;\\">Hometown</td>
              <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
              <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: right;\\">Address</td>
              <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"3\\">Yingdu Building, Zhichun Road, Beijing</td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div class=\\"mb-space-item\\">
    <div class=\\"mb-descriptions mb-descriptions-layout-inline-vertical mb-descriptions-size-medium\\">
      <div class=\\"mb-descriptions-title\\">User Info</div>
      <div class=\\"mb-descriptions-body\\">
        <table class=\\"mb-descriptions-table\\">
          <tbody>
            <tr class=\\"mb-descriptions-row\\">
              <td class=\\"mb-descriptions-item\\" colspan=\\"1\\">
                <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Name</div>
                <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Socrates</div>
              </td>
              <td class=\\"mb-descriptions-item\\" colspan=\\"1\\">
                <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Mobile</div>
                <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">123-1234-1234</div>
              </td>
              <td class=\\"mb-descriptions-item\\" colspan=\\"1\\">
                <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Residence</div>
                <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Beijing</div>
              </td>
            </tr>
            <tr class=\\"mb-descriptions-row\\">
              <td class=\\"mb-descriptions-item\\" colspan=\\"1\\">
                <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Hometown</div>
                <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Beijing</div>
              </td>
              <td class=\\"mb-descriptions-item\\" colspan=\\"2\\">
                <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Address</div>
                <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Yingdu Building, Zhichun Road, Beijing</div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<descriptions> demo: render [basic] correctly 1`] = `
"<div class=\\"mb-space mb-space-vertical mb-space-fill\\">
  <div class=\\"mb-space-item\\" style=\\"margin-bottom: 24px;\\">
    <div class=\\"mb-descriptions mb-descriptions-layout-inline-horizontal mb-descriptions-size-medium\\">
      <div class=\\"mb-descriptions-title\\">User Info</div>
      <div class=\\"mb-descriptions-body\\">
        <table class=\\"mb-descriptions-table\\">
          <tbody>
            <tr class=\\"mb-descriptions-row\\">
              <td class=\\"mb-descriptions-item\\" colspan=\\"1\\">
                <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Name</div>
                <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Socrates</div>
              </td>
              <td class=\\"mb-descriptions-item\\" colspan=\\"1\\">
                <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Mobile</div>
                <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">123-1234-1234</div>
              </td>
              <td class=\\"mb-descriptions-item\\" colspan=\\"1\\">
                <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Residence</div>
                <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Beijing</div>
              </td>
            </tr>
            <tr class=\\"mb-descriptions-row\\">
              <td class=\\"mb-descriptions-item\\" colspan=\\"1\\">
                <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Hometown</div>
                <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Beijing</div>
              </td>
              <td class=\\"mb-descriptions-item\\" colspan=\\"2\\">
                <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Address</div>
                <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Yingdu Building, Zhichun Road, Beijing</div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div class=\\"mb-space-item\\">
    <div class=\\"mb-descriptions mb-descriptions-layout-horizontal mb-descriptions-size-medium\\">
      <div class=\\"mb-descriptions-title\\">User Info</div>
      <div class=\\"mb-descriptions-body\\">
        <table class=\\"mb-descriptions-table\\">
          <tbody>
            <tr class=\\"mb-descriptions-row\\">
              <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Name</td>
              <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\"><span class=\\"mb-tag mb-tag-size-medium mb-tag-checked\\"><!--v-if-->Socrates<!--v-if--><!--v-if--></span></td>
              <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Mobile</td>
              <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\"><span class=\\"mb-tag mb-tag-size-medium mb-tag-checked\\"><!--v-if-->123-1234-1234<!--v-if--><!--v-if--></span></td>
              <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Residence</td>
              <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\"><span class=\\"mb-tag mb-tag-size-medium mb-tag-checked\\"><!--v-if-->Beijing<!--v-if--><!--v-if--></span></td>
              <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Hometown</td>
              <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\"><span class=\\"mb-tag mb-tag-size-medium mb-tag-checked\\"><!--v-if-->Beijing<!--v-if--><!--v-if--></span></td>
            </tr>
            <tr class=\\"mb-descriptions-row\\">
              <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Address</td>
              <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"7\\"><span class=\\"mb-tag mb-tag-size-medium mb-tag-checked\\"><!--v-if-->Yingdu Building, Zhichun Road, Beijing<!--v-if--><!--v-if--></span></td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<descriptions> demo: render [bordered] correctly 1`] = `
"<div class=\\"mb-descriptions mb-descriptions-layout-horizontal mb-descriptions-size-medium mb-descriptions-border\\">
  <div class=\\"mb-descriptions-title\\">User Info</div>
  <div class=\\"mb-descriptions-body\\">
    <table class=\\"mb-descriptions-table\\">
      <tbody>
        <tr class=\\"mb-descriptions-row\\">
          <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Name</td>
          <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Socrates</td>
          <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Mobile</td>
          <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">123-1234-1234</td>
          <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Residence</td>
          <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
        </tr>
        <tr class=\\"mb-descriptions-row\\">
          <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Hometown</td>
          <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
          <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Address</td>
          <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"3\\">Yingdu Building, Zhichun Road, Beijing</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`<descriptions> demo: render [layout] correctly 1`] = `
"<span class=\\"mb-radio-group-button mb-radio-group-size-undefined mb-radio-group-direction-horizontal\\"><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"mini\\"><span class=\\"mb-radio-button-content\\">mini</span></label><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"small\\"><span class=\\"mb-radio-button-content\\">small</span></label><label class=\\"mb-radio-button mb-radio-checked\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"medium\\"><span class=\\"mb-radio-button-content\\">medium</span></label><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"large\\"><span class=\\"mb-radio-button-content\\">large</span></label></span>
<div style=\\"margin-top: 20px;\\">
  <div class=\\"mb-descriptions mb-descriptions-layout-horizontal mb-descriptions-size-medium mb-descriptions-border\\">
    <div class=\\"mb-descriptions-title\\">User Info (horizontal)</div>
    <div class=\\"mb-descriptions-body\\">
      <table class=\\"mb-descriptions-table\\">
        <tbody>
          <tr class=\\"mb-descriptions-row\\">
            <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Name</td>
            <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Socrates</td>
            <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Mobile</td>
            <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">123-1234-1234</td>
            <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Residence</td>
            <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
          </tr>
          <tr class=\\"mb-descriptions-row\\">
            <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Hometown</td>
            <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
            <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Address</td>
            <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"3\\">Yingdu Building, Zhichun Road, Beijing</td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div class=\\"mb-descriptions mb-descriptions-layout-inline-horizontal mb-descriptions-size-medium mb-descriptions-border\\">
    <div class=\\"mb-descriptions-title\\">User Info (inline-horizontal)</div>
    <div class=\\"mb-descriptions-body\\">
      <table class=\\"mb-descriptions-table\\">
        <tbody>
          <tr class=\\"mb-descriptions-row\\">
            <td class=\\"mb-descriptions-item\\" colspan=\\"1\\">
              <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Name</div>
              <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Socrates</div>
            </td>
            <td class=\\"mb-descriptions-item\\" colspan=\\"1\\">
              <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Mobile</div>
              <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">123-1234-1234</div>
            </td>
            <td class=\\"mb-descriptions-item\\" colspan=\\"1\\">
              <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Residence</div>
              <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Beijing</div>
            </td>
          </tr>
          <tr class=\\"mb-descriptions-row\\">
            <td class=\\"mb-descriptions-item\\" colspan=\\"1\\">
              <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Hometown</div>
              <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Beijing</div>
            </td>
            <td class=\\"mb-descriptions-item\\" colspan=\\"2\\">
              <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Address</div>
              <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Yingdu Building, Zhichun Road, Beijing</div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div class=\\"mb-descriptions mb-descriptions-layout-vertical mb-descriptions-size-medium mb-descriptions-border\\">
    <div class=\\"mb-descriptions-title\\">User Info (vertical)</div>
    <div class=\\"mb-descriptions-body\\">
      <table class=\\"mb-descriptions-table\\">
        <tbody>
          <tr class=\\"mb-descriptions-row\\">
            <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Name</td>
            <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Mobile</td>
            <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Residence</td>
          </tr>
          <tr class=\\"mb-descriptions-row\\">
            <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Socrates</td>
            <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">123-1234-1234</td>
            <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
          </tr>
          <tr class=\\"mb-descriptions-row\\">
            <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Hometown</td>
            <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\" colspan=\\"2\\">Address</td>
          </tr>
          <tr class=\\"mb-descriptions-row\\">
            <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
            <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"2\\">Yingdu Building, Zhichun Road, Beijing</td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div class=\\"mb-descriptions mb-descriptions-layout-inline-vertical mb-descriptions-size-medium mb-descriptions-border\\">
    <div class=\\"mb-descriptions-title\\">User Info (inline-vertical)</div>
    <div class=\\"mb-descriptions-body\\">
      <table class=\\"mb-descriptions-table\\">
        <tbody>
          <tr class=\\"mb-descriptions-row\\">
            <td class=\\"mb-descriptions-item\\" colspan=\\"1\\">
              <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Name</div>
              <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Socrates</div>
            </td>
            <td class=\\"mb-descriptions-item\\" colspan=\\"1\\">
              <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Mobile</div>
              <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">123-1234-1234</div>
            </td>
            <td class=\\"mb-descriptions-item\\" colspan=\\"1\\">
              <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Residence</div>
              <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Beijing</div>
            </td>
          </tr>
          <tr class=\\"mb-descriptions-row\\">
            <td class=\\"mb-descriptions-item\\" colspan=\\"1\\">
              <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Hometown</div>
              <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Beijing</div>
            </td>
            <td class=\\"mb-descriptions-item\\" colspan=\\"2\\">
              <div class=\\"mb-descriptions-item-label mb-descriptions-item-label-inline\\" style=\\"text-align: left;\\">Address</div>
              <div class=\\"mb-descriptions-item-value mb-descriptions-item-value-inline\\" style=\\"text-align: left;\\">Yingdu Building, Zhichun Road, Beijing</div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>"
`;

exports[`<descriptions> demo: render [single] correctly 1`] = `
"<span class=\\"mb-radio-group-button mb-radio-group-size-undefined mb-radio-group-direction-horizontal\\"><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"mini\\"><span class=\\"mb-radio-button-content\\">mini</span></label><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"small\\"><span class=\\"mb-radio-button-content\\">small</span></label><label class=\\"mb-radio-button mb-radio-checked\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"medium\\"><span class=\\"mb-radio-button-content\\">medium</span></label><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"large\\"><span class=\\"mb-radio-button-content\\">large</span></label></span>
<div class=\\"mb-descriptions mb-descriptions-layout-horizontal mb-descriptions-size-medium\\" style=\\"margin-top: 20px;\\">
  <div class=\\"mb-descriptions-title\\">User Info</div>
  <div class=\\"mb-descriptions-body\\">
    <table class=\\"mb-descriptions-table\\">
      <tbody>
        <tr class=\\"mb-descriptions-row\\">
          <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Name</td>
          <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Socrates</td>
        </tr>
        <tr class=\\"mb-descriptions-row\\">
          <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Mobile</td>
          <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">123-1234-1234</td>
        </tr>
        <tr class=\\"mb-descriptions-row\\">
          <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Residence</td>
          <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
        </tr>
        <tr class=\\"mb-descriptions-row\\">
          <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Hometown</td>
          <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Beijing</td>
        </tr>
        <tr class=\\"mb-descriptions-row\\">
          <td class=\\"mb-descriptions-item-label mb-descriptions-item-label-block\\" style=\\"text-align: left;\\">Address</td>
          <td class=\\"mb-descriptions-item-value mb-descriptions-item-value-block\\" style=\\"text-align: left;\\" colspan=\\"1\\">Yingdu Building, Zhichun Road, Beijing</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;
